Added Courses and changed some rutes to fit with courses
