# eWiLL_backend/src/main/kotlin/com/wipdev/eWiLL_backend/endpoints/TaskController.kt
@@ -2,30 +2,26 @@ package com.wipdev.eWiLL_backend.endpoints
 
 import com.wipdev.eWiLL_backend.endpoints.dataclasses.Task
 import com.wipdev.eWiLL_backend.services.TaskService
+import org.intellij.lang.annotations.Pattern
 import org.springframework.beans.factory.annotation.Autowired
-import org.springframework.web.bind.annotation.DeleteMapping
-import org.springframework.web.bind.annotation.GetMapping
-import org.springframework.web.bind.annotation.PathVariable
-import org.springframework.web.bind.annotation.PostMapping
-import org.springframework.web.bind.annotation.PutMapping
-import org.springframework.web.bind.annotation.RequestMapping
-import org.springframework.web.bind.annotation.RestController
+import org.springframework.web.bind.annotation.*
 
 @RequestMapping("/api/tasks")
 @RestController
-class AssignmentController() {
+class TaskController() {
 
     @Autowired
     lateinit var service: TaskService
 
-    @GetMapping
-    fun getAll() = service.getAll()
+    @GetMapping("/{courseId}/{id}")
+    fun getAll(@PathVariable courseId:Long,@PathVariable id: Long) = service.getAll(courseId,id)
 
     @GetMapping("/{id}")
     fun getById(@PathVariable id: Long) = service.getById(id)
 
-    @PostMapping
-    fun create(task: Task) = service.create(task)
+    @PostMapping("/{courseId}")
+    @ResponseBody
+    fun create(@PathVariable courseId: Long, task: Task) = service.create(courseId,task)
 
     @PutMapping("/{id}")
     fun update(@PathVariable id: Long, task: Task) = service.update(id, task)
