# eWiLL_backend/src/main/kotlin/com/wipdev/eWiLL_backend/endpoints/dataclasses/Task.kt
@@ -1,3 +1,3 @@
 package com.wipdev.eWiLL_backend.endpoints.dataclasses
 
-data class Task(val id: Long?, val name: String?, val description: String?, val dueDate: String?, val subject: String?, val teacher: String?)
+data class Task(val id: Long?, val name: String?, val description: String?, val dueDate: String?, val subject: String?, val courseId:Long?)
